--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>react-webpack-babel-sass-boilerplate</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <meta charset="UTF-8" />
+    <title>GOAL TRACKER</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
